--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
                 <version>3.4.0</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven3-plugin</artifactId>
                 <version>1.10.19</version>
@@ -234,12 +239,7 @@
                     <configuration>
                         <properties>
                             <cargo.servlet.port>8080</cargo.servlet.port>
-                            <cargo.logging>medium</cargo.logging>
-                            <cargo.jvmargs>
-                                -Dfile.encoding=UTF-8 
-                                -Dfile.upload.path=/d:/Workspace/campus/uploads 
-                                -Dfile.upload.url=http://localhost:8080/uploads
-                            </cargo.jvmargs>
+                            <cargo.logging>high</cargo.logging>
                         </properties>
                     </configuration>
                     <deployables>
