--- a/campus-app/package.json
+++ b/campus-app/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@iconify-json/ep": "^1.2.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -36,6 +37,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.86.3",
     "sass-loader": "^16.0.5",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^5.2.8"
   },
   "eslintConfig": {
