--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
     "pinia": "^3.0.2",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
     "vue-router": "^4.2.4"
