--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <jakarta.el.version>4.0.2</jakarta.el.version>
         <commons.lang3.version>3.13.0</commons.lang3.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <logback.version>1.3.14</logback.version>
+        <slf4j.version>2.0.13</slf4j.version>
     </properties>
 
     <repositories>
@@ -51,12 +53,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.13</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.14</version>
+            <version>${logback.version}</version>
         </dependency>
         <!-- Spring Framework -->
         <dependency>
